# pokemon-dialogue

./: .gitignore  pyproject.toml
dialogue-demo/: response.py
dialogue-demo/asr/: grammar-mic.jconf  grammar.jconf
dialogue-demo/asr/grammar/: introduction.dfa  introduction.dict  introduction.grammar  introduction.term  introduction.voca  introduction.yomi  pokemon.dfa  pokemon.dict  pokemon.grammar  pokemon.term  pokemon.voca  pokemon.yomi
dialogue-demo/dialogue/: dialogue1.conf
dialogue-demo/sid/: spkidlist.txt
dialogue-demo/sid/GMM/: input  s1_b01  s1_b01_01  s1_b01_02  s1_b02  s1_b02_01  s1_b02_02  s1_b03  s1_b03_01  s1_b03_02  s1_b04  s1_b04_01  s1_b04_02  s1_b04_03  s1_b05  s1_b05_01  s1_b05_02  s1_b06  s1_b06_01  s1_b06_02  s1_b07  s1_b07_01  s1_b07_02  s1_b08  s1_b08_01  s1_b08_02  s1_b08_03  s1_b09  s1_b09_01  s1_b09_02  s1_b09_03  s1_b10  s1_b10_01  s1_b10_02  s1_b10_03  s1_b11  s1_b11_01  s1_b11_02  s1_b11_03  s1_b11_04  (+172 more)
dialogue-demo/sid/mfcc/: input.mfcc  s1_b01.mfcc  s1_b01_01.mfcc  s1_b01_02.mfcc  s1_b02.mfcc  s1_b02_01.mfcc  s1_b02_02.mfcc  s1_b03.mfcc  s1_b03_01.mfcc  s1_b03_02.mfcc  s1_b04.mfcc  s1_b04_01.mfcc  s1_b04_02.mfcc  s1_b04_03.mfcc  s1_b05.mfcc  s1_b05_01.mfcc  s1_b05_02.mfcc  s1_b06.mfcc  s1_b06_01.mfcc  s1_b06_02.mfcc  s1_b07.mfcc  s1_b07_01.mfcc  s1_b07_02.mfcc  s1_b08.mfcc  s1_b08_01.mfcc  s1_b08_02.mfcc  s1_b08_03.mfcc  s1_b09.mfcc  s1_b09_01.mfcc  s1_b09_02.mfcc  s1_b09_03.mfcc  s1_b10.mfcc  s1_b10_01.mfcc  s1_b10_02.mfcc  s1_b10_03.mfcc  s1_b11.mfcc  s1_b11_01.mfcc  s1_b11_02.mfcc  s1_b11_03.mfcc  (+173 more)
pokemon_dialogue/: pokemon.py
(+66 files in other folders)
