[tool.poetry]
name = "pokemon-dialogue"
version = "0.1.0"
description = ""
authors = ["howarudo_gakkapac <howardtangkulung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
requests = "^2.32.3"
sounddevice = "^0.5.1"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
